# hash-collisions

./: .gitignore  Cargo.toml  README.md
src/: collision_finder.rs  crc.rs  crypto.rs  digest_producer.rs  hasher.rs  main.rs
