[package]
name = "hash-collisions"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crc = "2.1.0"
digest = "0.10.3"
sha2 = "0.10.2"
md-5 = "0.10.1"
sha1 = "0.10.1"
fasthash = "0.4.0"
clap = { version = "3.1.6", features = ["derive"] }
crossbeam-channel = "0.5.3"
rayon = "1.5.1"